# Asteroids

./: .gitignore  CMakeLists.txt  README.md
android/: AndroidManifest.xml
android/res/values/: strings.xml
ios/: Project-Info.plist
qml/: AsteroidSystem.qml  CleanupSystem.qml  LivesDisplay.qml  Main.qml  config.json
qml/entities/: Asteroid.qml  Bullet.qml  Player.qml
qml/gui/: DefaultButton.qml  GameOverPopup.qml  LivesDisplay.qml
qml/scenes/: GameScene.qml  HighscoresScene.qml  MenuScene.qml
src/: HighscoresSystem.cpp  HighscoresSystem.h  LivesSystem.cpp  LivesSystem.h  ScoreSystem.cpp  ScoreSystem.h  main.cpp
